[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/MainMenu.gd" type="Script" id=1]

[sub_resource type="Theme" id=1]

[node name="MainMenu" type="Node2D"]
__meta__ = {
"_edit_vertical_guides_": [ 288.0 ]
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1360.0
margin_bottom = 768.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 120.0
margin_top = 80.0
margin_right = 1240.0
margin_bottom = 688.0
theme = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 84.0
margin_bottom = 608.0
size_flags_horizontal = 2
size_flags_vertical = 15
script = ExtResource( 1 )

[node name="NewGame" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 84.0
margin_bottom = 20.0
text = "New Game"

[node name="HostGame" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 84.0
margin_bottom = 44.0
text = "Host Game"

[node name="JoinGame" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 84.0
margin_bottom = 68.0
text = "Join Game"

[node name="Settings" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 84.0
margin_bottom = 92.0
text = "Settings"

[node name="Exit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 84.0
margin_bottom = 116.0
text = "Exit"
